--- a/templates/register.html
+++ b/templates/register.html
@@ -29,12 +29,12 @@
             {#            账号#}
             <div class="user-count">
                 <label for="user-count">账号：</label>
-                <input type="text" placeholder="6-18位字母数字组合" id="user-count" name="account" required="required">
-                <select class="user-count-mail-type" name="mail-type">
-                    <option value="163">@163.com</option>
-                    <option value="126">@126.com</option>
-                    <option value="yeah">@yeah.net</option>
-                </select>
+                <input type="text" placeholder="6-18位字母数字组合" id="user-count" name="account" required="required" style="width: 320px">
+{#                <select class="user-count-mail-type" name="mail-type">#}
+{#                    <option value="163">@163.com</option>#}
+{#                    <option value="126">@126.com</option>#}
+{#                    <option value="yeah">@yeah.net</option>#}
+{#                </select>#}
                 <i></i>
             </div>
 
