--- a/templates/goodDetail.html
+++ b/templates/goodDetail.html
@@ -141,7 +141,7 @@
             </div>
             {#            商品详情#}
             <div class="m-goods-content">
-                {% for good in goods %}
+                {% for good in goodsList %}
 
                     {#            商品图片部分#}
                     <figure class="goods-pic">
@@ -275,7 +275,7 @@
                         {#                    立即购买 加入购物车 收藏#}
                         <div class="buyButton outline" id="btnBuyBox">
                             <button id="btnBuy">立即购买</button>
-                            <button id="btnAddCart"><i></i>加入购物车</button>
+                            <button id="btnAddCart" goodsid="{{ good.id }}"><i></i>加入购物车</button>
                             <button id="btnCollect"><i class="icon icon-heart-o"></i>收藏</button>
                         </div>
 
@@ -302,34 +302,45 @@
 
                     </article>
 
-                    {#                商品右侧导航栏#}
-                    <aside class="goods-right-nav aside-right">
-                        <div>
-                            <i class="icon icon-flag-aside indexRight_checkin"></i>签到
-                            <div class="checkin_content">
-                                <div class="triangle_1"></div>
-                                <div class="triangle_2"></div>
-                                <div class="content">
-                                    <span>每日签到</span><span>赢考拉豆</span>
-                                </div>
+                {#                商品右侧导航栏#}
+                <aside class="goods-right-nav aside-right">
+                    <div>
+                        <i class="icon icon-flag-aside indexRight_checkin"></i>签到
+                        <div class="checkin_content">
+                            <div class="triangle_1"></div>
+                            <div class="triangle_2"></div>
+                            <div class="content">
+                                <span>每日签到</span><span>赢考拉豆</span>
                             </div>
                         </div>
-                        <div style="position:relative">
-                            <a href="/goodShopCart/"
-                               style="width:100%;height:100%;display:flex;flex-direction:column;align-items:center;justify-content:center">
-                                <i class="icon icon-shopcart-aside indexRight_cart "></i>
-                                购物车
-                                <em class="cart-goods-num" id="btnShowCartNum" style="display:none"></em>
-                            </a>
-                        </div>
-                        <div>
-                            <i class="icon icon-mobile-aside indexRight_app "></i>APP
-                            <div class="appQRcode"></div>
-                        </div>
-                        <div><i class="indexRight_triangle"></i>TOP</div>
-                    </aside>
+                    </div>
+                    <div style="position:relative" class="cart-plus">
+                        <a href="/goodShopCart/"
+                           style="width:100%;height:100%;display:flex;flex-direction:column;align-items:center;justify-content:center">
+                            <i class="icon icon-shopcart-aside indexRight_cart "></i>
+                            购物车
+                            <em class="cart-goods-num" id="btnShowCartNum" style="display: none">
+{#                                当前商品在购物车的数量#}
+{#                                {% for cart in carts %}#}
+{#                                    {% if good.id == cart.goods_id %}#}
+{#                                        {{ cart.number }}#}
+{#                                    {% endif %}#}
+{#                                {% endfor %}#}
 
+{#                                购物车所以商品的数量#}
+                                {{ count }}
+                            </em>
+                        </a>
+                    </div>
+                    <div>
+                        <i class="icon icon-mobile-aside indexRight_app "></i>APP
+                        <div class="appQRcode"></div>
+                    </div>
+                    <div><i class="indexRight_triangle"></i>TOP</div>
+                </aside>
                 {% endfor %}
+
+
             </div>
         </div>
 
