--- a/templates/goodShopCart.html
+++ b/templates/goodShopCart.html
@@ -195,8 +195,7 @@
                 <div class="totalbox">
                     <div class="totalLeft">
                         <div class="btn-selectall">
-                            <input type="checkbox" id="btn-total-selectall" class="new-checkbox btn-all-select"
-                                   isselect="false">
+                            <input type="checkbox" id="btn-total-selectall" class="new-checkbox btn-all-select" isselect="false">
                             <label for="btn-total-selectall" class="label-all-select">全选</label>
                         </div>
                         <div class="btn-deleteSelect">
