--- a/templates/goodShopCart.html
+++ b/templates/goodShopCart.html
@@ -208,7 +208,7 @@
                                 总价(不含运费)：<span class="currency notice-keyword">￥</span><span
                                         class="total-goods-money notice-keyword">0.00</span></p>
                             <p>活动优惠：-￥<span class="total-goods-saved">0.00</span>
-                                商品应付总计：￥<span class="total-goods-cost">0.00</span>
+{#                                商品应付总计：￥<span class="total-goods-cost">0.00</span>#}
                                 商品税费：￥<span class="total-goods-tax">0.00</span></p>
                         </div>
                         <button class="btn-pay" id="btn-total-pay">去结算</button>
